fix(DropDown): Layout problem
BUG 146917

--- a/src/components/dropdownItem/DropdownItem.scss
+++ b/src/components/dropdownItem/DropdownItem.scss
@@ -107,7 +107,7 @@ $dropdown-padding: 10px;
 }
 
 .dropdown-align-left {
-    left: -$dropdown-padding*2.5;
+    left: -$dropdown-padding;
 
     &:before { left: $dropdown-padding; }
 }
